--- a/style.css
+++ b/style.css
@@ -37,3 +37,48 @@
     font-size: 30px;
     color: rgb(197, 0, 0);
 }
+
+.footer-section {
+    background-color: #0d2436;
+}
+
+.footer-section-copyright-container {
+    text-align: center;
+    color: #ffffff;
+    background-color: #d1df0b;
+    padding: 10px;
+}
+
+.footer-section-image {
+    border-color: #666 #1c87c9;
+    border-image: none;
+    border-radius: 50% 50% 50% 50%;
+    border-style: solid;
+    border-width: 2px;
+    height: 80px;
+    width: 70px;
+    overflow: hidden;
+    
+
+}
+
+.footer-section-sub-heading {
+    color: #cced00;
+    font-family: "Roboto";
+    font-size: 20px;
+    font-weight: bold;
+
+}
+
+.footer-section-text {
+    color: #000000;
+    font-family: "Roboto";
+    font-size: 15px;
+
+}
+
+.icon {
+    color: #ff4800;
+    font-size: 18px;
+}
+
